Make clusters work smoothly and fix icon deactivation

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Leaflet Yandex Map Example</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/MarkerCluster.Default.css" />
+    <link rel="stylesheet" href="./node_modules/leaflet/dist/leaflet.css" />
+    <link rel="stylesheet" href="./node_modules/leaflet.markercluster/dist/MarkerCluster.css" />
+    <link rel="stylesheet" href="./node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css" />
 
     <link rel="stylesheet" href="./src/style.css" />
   </head>
@@ -55,16 +56,22 @@
           lat: 56.346387, lon: 35.363405
         },
         {
-          name: null, desc: null, type: "type1",
-          lat: 59.876263, lon: 46.644945
+          name: "посёлок Пригородный", 
+          desc: "Взят для теста этой библиотеки", 
+          type: "type3",
+          lat: 57.616853, lon: 34.604165
         },
         {
-          name: null, desc: null, type: "type1",
-          lat: 54.741722, lon: 37.942197
+          name: "Новый Некоуз", 
+          desc: "Еще один тест", 
+          type: "type3",
+          lat: 57.905578, lon: 38.063682
         },
         {
-          name: null, desc: null, type: "type1",
-          lat: 53.569316, lon: 38.863203
+          name: "Прямухинское селение", 
+          desc: "В этом регионе только тесты", 
+          type: "type3",
+          lat: 56.939203, lon: 34.392051
         },
         {
           name: null, desc: null, type: "type1",
